CIFAR10_sequential.log
  File "baseline.py", line 74
    for 
       ^
SyntaxError: invalid syntax
